MINOR: Cleanups in raft module (#17877)
Reviewers: Yash Mayya <yash.mayya@gmail.com>